# trebuchet

./: .gitignore  LICENSE  Makefile  default.nix  pyproject.toml  shell.nix
trebuchet/: __init__.py  __main__.py
